--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
   <uses-permission android:name="android.permission.VIBRATE"/>
   <uses-permission android:name="android.permission.FLASHLIGHT"/>
 
-  <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="10"/>
+  <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="10"/>
 
   <!-- Don't require camera, as this requires a rear camera. This allows it to work on the Nexus 7 -->
   <uses-feature android:name="android.hardware.camera" android:required="false"/>
@@ -41,7 +41,7 @@
                     android:anyDensity="true"/>
 
   <application>
-      <activity android:clearTaskOnLaunch="true" android:configChanges="orientation|keyboardHidden" android:name="com.google.zxing.client.android.CaptureActivity" android:screenOrientation="portrait" android:stateNotNeeded="true" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:windowSoftInputMode="stateAlwaysHidden"/>
+      <activity android:clearTaskOnLaunch="true" android:configChanges="orientation|keyboardHidden" android:name="com.google.zxing.client.android.CaptureActivity" android:screenOrientation="portrait" android:stateNotNeeded="true" android:theme="@style/AppTheme" android:windowSoftInputMode="stateAlwaysHidden"/>
       <activity android:name="com.google.zxing.client.android.HelpActivity" android:screenOrientation="user"/>
   </application>
 
